[package]
name = "rustyjam21"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#quad-snd = { git = "https://github.com/not-fl3/quad-snd"  }

[dependencies.miniquad]
version = "0.3.0-alpha.37"

[dependencies.macroquad]
#path = "../macroquad"
version = "0.3.8"

[dependencies.nanoserde]
#path = "../nanoserde"
version = "0.1.29"

[dependencies.keyframe]
version = "1.0.3"

[dependencies.keyframe_derive]
version = "1.0.0"

[profile.dev.package.'*']
opt-level = 3

#[profile.release]
#incremental = true
#lto = true